# movie-

./: Cargo.toml  movie.db
src/: handler.rs  lib.rs  main.rs  models.rs  services.rs
src/auth/: mod.rs  password.rs  session.rs
src/config/: database.rs  mod.rs
src/database/: mod.rs  models.rs
