[package]
name = "movie"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rpassword = "7.0.0"
bcrypt = "0.15.0"
sqlx = { version = "0.7.0", features = ["runtime-tokio-native-tls", "sqlite"] }  # 去掉 migrate 特性
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"